# llvm-hs-quote

./: .gitignore  Example.hs  Example2.hs  LICENSE  README.md  llvm-hs-quote.cabal  stack.yaml
src/LLVM/Quote/: AST.hs  Base.hs  LLVM.hs  Parser.hs  SSA.hs
src/LLVM/Quote/Parser/: Lexer.x  Monad.hs  Parser.y  Tokens.hs
test/: Test.hs  test.hs
test/LLVM/General/Quote/Test/: Constants.hs  DataLayout.hs  InlineAssembly.hs  Instructions.hs  Loops.hs  Metadata.hs  Tests.hs
test/LLVM/Quote/Test/: Constants.hs  DataLayout.hs  InlineAssembly.hs  Instructions.hs  Loops.hs  Metadata.hs  Module.hs  Tests.hs
